cmake_minimum_required(VERSION 3.17)
project(algospot)

set(CMAKE_CXX_STANDARD 20)

add_executable(picnic picnic.cpp)
add_executable(boardcover boardcover.cpp)
add_executable(clocksync clocksync.cpp)
add_executable(example_karatsuba example_karatsuba.cpp)
add_executable(quadtree quadtree.cpp)
add_executable(fence fence.cpp)
add_executable(fanmeeting fanmeeting.cpp)
add_executable(jumpgame jumpgame.cpp)
add_executable(wlidcard wlidcard.cpp)
add_executable(trianglepath trianglepath.cpp)
add_executable(lis lis.cpp)
add_executable(jlis jlis.cpp)
add_executable(pi pi.cpp)
add_executable(quantize quantize.cpp)
add_executable(tiling2 tiling2.cpp)
add_executable(tripathcnt tripathcnt.cpp)
add_executable(snail snail.cpp)
add_executable(asymtiling asymtiling.cpp)
add_executable(poly poly.cpp)
add_executable(numb3rs numb3rs.cpp)
add_executable(josephus josephus.cpp)